# up-ynab

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  flake.nix
app/: Cargo.toml
app/src/: balance.rs  cli.rs  config.rs  convert.rs  lib.rs  main.rs  run.rs  transaction.rs  transfer.rs  up.rs  ynab.rs
app/src/api/: mod.rs  up.rs  ynab.rs
app/src/cmd/: mod.rs  sync.rs
app/src/frontend/: cli.rs  mod.rs  run.rs
app/src/model/: account.rs  balance.rs  mod.rs  transaction.rs
app/test/data/: up_expense.json  up_income.json  up_match_interleaved.json  up_match_sussy_round_ups.json  up_round_up.json  up_round_up_balance.json  up_round_up_transfer.json  up_sussy_round_up.json  up_transfer.json  up_transfer_balance.json  up_transfer_invalid_account_id.json  up_transfer_invalid_transfer_account_id.json
up_client/: Cargo.toml
up_client/docs/: AccountResourceAttributes.md  AccountResourceLinks.md  AccountResourceRelationshipsTransactions.md  AccountsApi.md  CategoryInputResourceIdentifier.md  CategoryResourceRelationships.md  CategoryResourceRelationshipsParentData.md  ErrorObject.md  ErrorResponse.md  GetAccountResponse.md  GetTransactionResponse.md  HoldInfoObject.md  HoldInfoObjectForeignAmount.md  ListAccountsResponseLinks.md  ListCategoriesResponse.md  ListTagsResponse.md  ListTransactionsResponse.md  ListWebhooksResponse.md  MoneyObject.md  OwnershipTypeEnum.md  PingResponse.md  RoundUpObject.md  TagInputResourceIdentifier.md  TransactionResourceAttributesCashback.md  TransactionResourceAttributesHoldInfo.md  TransactionResourceRelationshipsAccount.md  TransactionResourceRelationshipsTags.md  TransactionsApi.md  UpdateTransactionCategoryRequest.md  UpdateTransactionTagsRequest.md  WebhookDeliveryLogResource.md  WebhookDeliveryLogResourceAttributesRequest.md  WebhookDeliveryLogResourceAttributesResponse.md  WebhookDeliveryLogResourceRelationshipsWebhookEventData.md  WebhookEventCallback.md  WebhookEventResource.md  WebhookEventResourceRelationships.md  WebhookEventResourceRelationshipsTransaction.md  WebhookEventResourceRelationshipsTransactionData.md  WebhookEventResourceRelationshipsWebhook.md  (+3 more)
up_client/src/apis/: accounts_api.rs  categories_api.rs  mod.rs  utility_endpoints_api.rs  webhooks_api.rs
up_client/src/models/: account_resource_relationships_transactions.rs  account_resource_relationships_transactions_links.rs  account_type_enum.rs  cashback_object.rs  category_resource.rs  category_resource_relationships.rs  category_resource_relationships_children.rs  category_resource_relationships_children_data_inner.rs  category_resource_relationships_parent.rs  create_webhook_response.rs  get_category_response.rs  get_transaction_response.rs  get_webhook_response.rs  hold_info_object.rs  list_categories_response.rs  list_webhooks_response.rs  ownership_type_enum.rs  ping_response_meta.rs  round_up_object.rs  round_up_object_boost_portion.rs  transaction_resource.rs  transaction_resource_attributes_hold_info.rs  transaction_resource_relationships_account.rs  transaction_resource_relationships_account_data.rs  transaction_resource_relationships_category_links.rs  transaction_resource_relationships_transfer_account.rs  update_transaction_category_request.rs  update_transaction_category_request_data.rs  update_transaction_tags_request.rs  webhook_delivery_log_resource_attributes_response.rs  webhook_delivery_log_resource_relationships.rs  webhook_delivery_log_resource_relationships_webhook_event.rs  webhook_delivery_status_enum.rs  webhook_event_resource_attributes.rs  webhook_event_resource_relationships_transaction_data.rs  webhook_event_resource_relationships_webhook_data.rs  webhook_input_resource.rs  webhook_input_resource_attributes.rs
ynab/: Cargo.toml  README.md
ynab/docs/: BudgetSummary.md  BudgetsApi.md  CategoriesApi.md  Category.md  HybridTransaction.md  PostAccountWrapper.md  PutTransactionWrapper.md  SaveAccount.md  SaveTransaction.md  SaveTransactionWithOptionalFields.md  ScheduledTransactionDetail.md  ScheduledTransactionSummary.md  TransactionFlagColor.md  TransactionsImportResponse.md  UserApi.md
ynab/src/apis/: accounts_api.rs  categories_api.rs  mod.rs  payees_api.rs  scheduled_transactions_api.rs  user_api.rs
ynab/src/models/: account.rs  account_response_data.rs  account_type.rs  budget_settings_response.rs  budget_summary_response_data.rs  bulk_response_data_bulk.rs  bulk_transactions.rs  (+39 more)
(+176 files in other folders)
