[package]
name = "up-ynab"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
derive_builder = "0.12"
figment = { version = "0.10", features = ["env"] }
iso_currency = { version = "0.4", features = ["with-serde"] }
lazy_static = "1.4.0"
nutype = { version = "0.4", features = ["serde", "regex"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
